<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <ImageView
        android:id="@+id/imgFoto"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_centerVertical="true"
        android:src="@mipmap/ic_launcher"/>

    <TextView
        android:id="@+id/textview_nome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:alpha="0.87"
        android:gravity="right"
        android:padding="4dp"
        android:textSize="16sp"
        android:text="@string/nome"/>

    <TextView
        android:id="@+id/textview_descricao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/textview_nome"
        android:alpha="0.87"
        android:padding="4dp"
        android:textSize="14sp"
        android:text="@string/descricao"/>

    <TextView
        android:id="@+id/tEndereco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:alpha="0.87"
        android:gravity="right"
        android:padding="4dp"
        android:textSize="16sp"
        android:text="@string/endereco"/>

    <TextView
        android:id="@+id/tFone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:alpha="0.87"
        android:gravity="right"
        android:padding="4dp"
        android:textSize="16sp"
        android:text="@string/telefone"/>

    <TextView
        android:id="@+id/tEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:alpha="0.87"
        android:gravity="right"
        android:padding="4dp"
        android:textSize="16sp"
        android:text="@string/email"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/tDescDetalhada"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Descrição Detalhada"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>